WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185025
[MIPS] Fix branch offsets in branchNeg32
https://bugs.webkit.org/show_bug.cgi?id=185025
Summary
[MIPS] Fix branch offsets in branchNeg32
Dominik Inführ
Reported
2018-04-26 02:55:08 PDT
[MIPS] Fix branch offsets in branchNeg32
Attachments
Patch
(1.52 KB, patch)
2018-04-26 03:31 PDT
,
Dominik Inführ
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominik Inführ
Comment 1
2018-04-26 03:31:21 PDT
Created
attachment 338866
[details]
Patch
Yusuke Suzuki
Comment 2
2018-04-26 04:14:55 PDT
Comment on
attachment 338866
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2018-04-26 05:04:27 PDT
Comment on
attachment 338866
[details]
Patch Clearing flags on attachment: 338866 Committed
r231044
: <
https://trac.webkit.org/changeset/231044
>
WebKit Commit Bot
Comment 4
2018-04-26 05:04:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-04-26 05:05:27 PDT
<
rdar://problem/39755009
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug